about us copy complete

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -10,13 +10,13 @@
               <h1>Felix</h1>
             </div>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae
-              tenetur expedita, fugiat vero porro beatae, a voluptatibus
-              consequatur sequi nisi dolorem repellendus ipsa dolorum
-              laudantium, totam nihil. Atque corporis aspernatur nesciunt nemo
-              esse illo dolorem quas fuga officiis animi, error cupiditate sequi
-              totam beatae tenetur. Nesciunt quasi reiciendis blanditiis
-              similique!
+              Chief Bonsai Officer (最高盆栽責任者) and head of the business
+              side of things, Felix's rootless business prowess leaves all in
+              the boardroom shaken and in awe of his business skills. Some say
+              his suit is actually a bonsai tree which has formed around him,
+              giving him a sense of calm and serenity to handle even the
+              toughest customers. He's known for branching out into his root
+              network to find the best deals.
             </p>
           </div>
         </div>
@@ -30,13 +30,13 @@
               <h1>Andy</h1>
             </div>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae
-              tenetur expedita, fugiat vero porro beatae, a voluptatibus
-              consequatur sequi nisi dolorem repellendus ipsa dolorum
-              laudantium, totam nihil. Atque corporis aspernatur nesciunt nemo
-              esse illo dolorem quas fuga officiis animi, error cupiditate sequi
-              totam beatae tenetur. Nesciunt quasi reiciendis blanditiis
-              similique!
+              The company's official Bonsai Protection Officer (盆栽保護官),
+              hobbit lookalike, equipped with special claw finger to fight off
+              bonsai predators. After undergoing intensive training since Monday
+              morning from the Bonsai King himself, his hobbit-like looks have
+              increased at the same rate as his knowledge, as is bonsai
+              tradition. It is believed he will look like Samwise Gamgee by next
+              Friday.
             </p>
           </div>
         </div>
@@ -52,20 +52,19 @@
               <h1>Alex</h1>
             </div>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae
-              tenetur expedita, fugiat vero porro beatae, a voluptatibus
-              consequatur sequi nisi dolorem repellendus ipsa dolorum
-              laudantium, totam nihil. Atque corporis aspernatur nesciunt nemo
-              esse illo dolorem quas fuga officiis animi, error cupiditate sequi
-              totam beatae tenetur. Nesciunt quasi reiciendis blanditiis
-              similique!
+              Finally we have the Bonsai King (盆栽王) himself. This man has
+              forgotten more about the art of bonsai than many people learn in a
+              lifetime. He was born among the bonsai, he was shaped by them.
+              This has given him the ability to communicate directly with them,
+              hearing all of their needs, and offering them everything they need
+              to flourish into the beautiful trees you see on our website.
             </p>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <h1 class="centerHeading">Come find us</h1>
+  <h1 class="centerHeading">Come Find Us</h1>
 
   <div class="producPageContentWrapper">
     <div class="singleProducContainer">
@@ -81,15 +80,21 @@
       <div class="singleProductTextContainer">
         <div class="topSection">
           <div class="singleProductHeaderContainer">
-            <h2>Visit our amazing garden!</h2>
+            <h2>Visit Our Amazing Garden!</h2>
           </div>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae
-            tenetur expedita, fugiat vero porro beatae, a voluptatibus
-            consequatur sequi nisi dolorem repellendus ipsa dolorum laudantium,
-            totam nihil. Atque corporis aspernatur nesciunt nemo esse illo
-            dolorem quas fuga officiis animi, error cupiditate sequi totam
-            beatae tenetur. Nesciunt quasi reiciendis blanditiis similique!
+            Find us in the wonderful bonsai kingdom, also known as Storkower
+            Straße. It might not look like it, but it is the optimal place for
+            bonsai to thrive. the car fumes and office blocks help the bonsai to
+            develop resilience.
+          </p>
+          <h2>How to Get Here</h2>
+          <p>
+            <ul>
+              <li>Nearest S-Bahn station is S Landsberger Allee
+              </li>
+              <li>Parking is available next door</li>
+            </ul>
           </p>
         </div>
       </div>
