--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="teamSection">
     <h1 class="centerHeading">Meet the Gardeners</h1>
-    <div class="producPageContentWrapper">
+    <div class="">
       <div class="singleProducContainer">
         <img src="/images/team/felix.png" alt="" />
         <div class="singleProductTextContainer">
@@ -70,8 +70,9 @@
     <div class="singleProducContainer">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d606.7578203771791!2d13.45297402822122!3d52.5328682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e76c7a190bf%3A0xf0f8fb2feac6bed4!2sStorkower%20Str.%20138%2C%2010407%20Berlin!5e0!3m2!1sde!2sde!4v1688558013950!5m2!1sde!2sde"
-        width="600"
-        height="450"
+        {{! width="600"
+        height="450" }}
+        width="150%"
         style="border: 0"
         allowfullscreen=""
         loading="lazy"
