new link for felix pic

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,7 +3,10 @@
     <h1 class="centerHeading">Meet the Gardeners</h1>
     <div class="">
       <div class="singleProducContainer">
-        <img src="/images/team/felix.png" alt="" />
+        <img
+          src="https://res.cloudinary.com/dse6ivx7u/image/upload/v1688719429/felix_r79eiy.png"
+          alt=""
+        />
         <div class="singleProductTextContainer">
           <div class="topSection">
             <div class="singleProductHeaderContainer">
